# dwm-lut-rs

./: .gitignore  Cargo.toml
crates/dwm-lut/: Cargo.toml  build.rs
crates/dwm-lut-config/: Cargo.toml
crates/dwm-lut-config/src/: lib.rs
crates/dwm-lut-hook/: Cargo.toml  build.rs
crates/dwm-lut-hook/shaders/: lut_pipeline.hlsl
crates/dwm-lut-hook/src/: blue_noise.rs  bootstrap.rs  d3d11_back_buffer.c  d3d11_back_buffer_25h2.c  d3d11_renderer.rs  debug_log.rs  desktop_redraw.rs  flip_gate.rs  lib.rs  lut_bypass.rs  lut_pipeline.rs  minhook.rs  profile.rs  resolver.rs  route_trace.rs  state.rs
crates/dwm-lut-hook/src/d3d11/: back_buffer.rs  d3d11_api.rs  fake_renderer.rs  mod.rs  plan.rs  renderer.rs
crates/dwm-lut-hook/src/d3d11_renderer/: context_state.rs  d3d11_api.rs  fake_renderer.rs  renderer.rs  test_stub.rs
crates/dwm-lut-hook/src/minhook/: detours.rs  mod.rs  present.rs
crates/dwm-lut-hook/src/present/: apply_lut.rs  collect.rs  mod.rs
crates/dwm-lut-hook/src/profile/: dwmcore_26100_1.rs  dwmcore_26100_1591.rs  dwmcore_26100_2161.rs  dwmcore_26100_2454.rs  dwmcore_26100_3912.rs  dwmcore_26100_4484.rs  dwmcore_26100_7309.rs  dwmcore_26100_7705.rs  dwmcore_26100_8737.rs  mod.rs  profile_26200.rs
crates/dwm-lut-injector/: Cargo.toml
crates/dwm-lut-injector/src/: cli.rs  config.rs  error.rs  injector.rs  main.rs  monitor.rs  monitor_list.rs  staging.rs
crates/dwm-lut-injector/src/lut/: eecolor.rs  mod.rs
crates/dwm-lut-injector/src/win32/: mod.rs  module.rs  process.rs  remote.rs
crates/dwm-lut-payload/: Cargo.toml
crates/dwm-lut-payload/src/: lib.rs  status.rs
crates/dwm-lut/src/: app_args.rs  cli.rs  cli_runner.rs  config.rs  elevation.rs  error.rs  host_runner.rs  launcher.rs  lib.rs  main.rs  monitor.rs  monitor_list.rs  native_dialog.rs  panic_report.rs  paths.rs  runtime.rs  security.rs  startup.rs
crates/dwm-lut/src/backend/: injector.rs  mod.rs  monitor.rs  staging.rs
crates/dwm-lut/src/backend/win32/: background.rs  mod.rs  remote.rs
crates/dwm-lut/src/cli/: mod.rs  monitors.rs  startup_task.rs
crates/dwm-lut/src/config/: document.rs  mod.rs  resolve.rs  runtime.rs
crates/dwm-lut/src/control/: build_hash.rs  client.rs  mod.rs  protocol.rs  server.rs
crates/dwm-lut/src/control/server/: mod.rs  pipe.rs
crates/dwm-lut/src/entry/: mod.rs
crates/dwm-lut/src/gui/: error.rs  fonts.rs  mod.rs  session.rs  tray.rs  worker.rs
crates/dwm-lut/src/gui/app/: config_editor.rs  file_dialog.rs  mod.rs  monitor_events.rs  mouse_focus.rs  view.rs
crates/dwm-lut/src/host/: application.rs  control_handler.rs  controller.rs  instance.rs  launch.rs  mod.rs  run.rs  startup_ipc.rs
crates/dwm-lut/src/host/launch/: mod.rs  startup_ipc.rs
crates/dwm-lut/src/inject/: injector.rs  mod.rs
crates/dwm-lut/src/inject/win32/: export.rs
crates/dwm-lut/src/lut/: common.rs  cube.rs
crates/dwm-lut/src/platform/: elevation.rs  mod.rs
crates/dwm-lut/ui/: app.slint
xtask/: Cargo.toml
xtask/src/: assets.rs  main.rs
