[package]
name = "dwm-lut-hook"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dwm_lut_hook"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
dwm-lut-config = { path = "../dwm-lut-config" }
minhook-sys = "0.1.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[build-dependencies]
cc = "1.2.62"
