[package]
name = "dwm-lut-hook"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dwm_lut_hook"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
dwm-lut-payload = { path = "../dwm-lut-payload" }
minhook-sys = "0.1.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_Threading"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[build-dependencies]
cc = "1.2.62"
