[package]
name = "dwm-lut-injector"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
] }
