[package]
name = "dwm-lut"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dwm-lut"
path = "src/bin/dwm-lut.rs"
test = false

[dependencies]
dwm-lut-payload = { path = "../dwm-lut-payload" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "Win32_System_TaskScheduler", "Win32_System_Variant"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_RemoteDesktop",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }
