[package]
name = "dwm-lut"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dwm-lut"
path = "src/bin/dwm-lut.rs"
test = false

[dependencies]
dwm-lut-payload = { path = "../dwm-lut-payload" }
eframe = { version = "0.35.0", default-features = false, features = ["wgpu", "default_fonts"] }
raw-window-handle = "0.6.2"
rfd = { version = "0.17.2", default-features = false, features = ["common-controls-v6"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.53.0", default-features = false, features = ["rt", "net", "time", "io-util", "sync", "macros"] }
tray-icon = { version = "0.24.1", default-features = false }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Graphics_DirectWrite", "Win32_System_Com", "Win32_System_Ole", "Win32_System_TaskScheduler", "Win32_System_Variant"] }
windows-core = "0.62.2"
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_RemoteDesktop",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1.31"
